@@ -4,9 +4,10 @@ import lombok.AllArgsConstructor;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import rx.Observable;
 
 import java.util.Arrays;
-import java.util.stream.Collectors;
+import java.util.List;
 
 /**
  * @author Jordan Luyke <jordanluyke@gmail.com>
@@ -29,27 +30,49 @@ public class Board {
         return new Board(squares, "");
     }
 
-    public void setSquare(Position position, Side side) {
-        squares[position.getIndex()] = side;
-        transcript += position.getCoordinates();
-    }
-
-    public int getAmount(Side side) {
-        return Arrays.stream(squares)
+    public Observable<Integer> getAmount(Side side) {
+        return Observable.from(squares)
                 .filter(square -> square == side)
-                .collect(Collectors.toList())
-                .size();
+                .toList()
+                .map(List::size);
     }
 
-    public void placePiece(Side side, Position position) {
-//        if(!isValidMove(side, position))
-//            throw new IllegalMoveException()
-    }
-
-    private boolean isValidMove(Side side, Position position) {
+    public Observable<Void> placePiece(Side side, Position position) {
         if(squares[position.getIndex()] != null)
-            return false;
-        return true;
+            return Observable.error(new IllegalMoveException());
+        return Observable.from(Direction.class.getEnumConstants())
+                .filter(direction -> position.isPositionValid(direction) && squares[position.getPosition(direction).getIndex()] == side.getOpposite())
+                .flatMap(direction -> getConnectingPositions(side, Arrays.asList(position), direction))
+                .defaultIfEmpty(null)
+                .flatMap(pos -> {
+                    if(pos == null)
+                        return Observable.error(new IllegalMoveException());
+                    return Observable.just(pos);
+                })
+                .doOnNext(pos -> squares[pos.getIndex()] = side)
+                .toList()
+                .doOnNext(Void -> transcript += position.getCoordinates())
+                .ignoreElements()
+                .cast(Void.class);
     }
-    // check for available legal moves (backtrack from open spaces next to pieces)
+
+    private Observable<Position> getConnectingPositions(Side side, List<Position> positions, Direction direction) {
+        Position lastPosition = positions.get(positions.size() - 1);
+
+        if(!lastPosition.getPosition(direction).isPositionValid(direction))
+            return Observable.empty();
+
+        Position currentPosition = lastPosition.getPosition(direction);
+        Side square = squares[currentPosition.getIndex()];
+
+        if(square == null)
+            return Observable.empty();
+
+        if(square == side)
+            return Observable.from(positions);
+
+        positions.add(currentPosition);
+
+        return getConnectingPositions(side, positions, direction);
+    }
 }
